aj-515 create instance api
